# wenet-aishell-u2pp

./: .dockerignore  .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  app_gradio.py  asr_server.py  env_autodl.sh  eval_cer.py  pyproject.toml  requirements.txt  run_eval.py  run_fast_pipeline.sh  run_pipeline.ps1  run_train.py  setup_local.ps1  wenet_hf_model.py
.github/workflows/: ci.yml
benchmark/: compare_architectures.py  error_analysis.py  gen_arch_diagram.py  gen_rtf_charts.py  plot_results.py  quantize_and_demo.py  streaming_tradeoff.py
results/: README.md  architecture_comparison.csv  architecture_comparison.md  error_analysis.md  full_training_benchmark.md  quantization_report.md  streaming_tradeoff.csv  streaming_tradeoff.md
scripts/: 00_prepare_autodl.sh  01_fetch_wenet.sh  02_prepare_aishell.sh  03_finetune_from_ckpt.sh  03_train_course_fast.sh  03_train_full.sh  04_decode_eval.sh  05_export_model.sh  06_package_runtime_model.sh  07_start_runtime_docker.sh  08_collect_results.sh  convert_to_hf.py  gen_interview_pdf.py  gen_tech_notes_pdf.py
tests/: conftest.py  test_data_loading.py  test_fbank.py
tools/: jsonl_to_wenet_data.py  make_subset_data_list.py  summarize_wenet_results.py
wenet/examples/aishell/sensevoice/: README.md  run.sh
wenet/wenet/dataset/: datapipes.py  dataset.py  processor.py
wenet/wenet/models/sensevoice/: convert_sensevoice_small_to_wenet_config_and_ckpt.py  sensevoice_small_model.py
wenet/wenet/models/transformer/: subsampling.py
wenet/wenet/utils/: class_utils.py  train_utils.py
(+10 files in other folders)
