[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "wenet-aishell-u2pp"
version = "0.1.0"
description = "WeNet Conformer U2++ AISHELL-1 End-to-End Speech Recognition"
readme = "README.md"
license = {text = "MIT"}

requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "soundfile>=0.12.0",
    "PyYAML>=6.0",
    "editdistance>=0.6.0",
    "tqdm>=4.60.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "flake8>=7.0",
    "isort>=5.12",
    "pre-commit>=3.0",
]
benchmark = [
    "matplotlib>=3.5",
    "pandas>=1.3",
]
tracking = [
    "wandb>=0.16.0",
    "mlflow>=2.10.0",
]
serve = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "websockets>=12.0",
]
webui = [
    "gradio>=4.0",
]
hub = [
    "huggingface_hub>=0.22.0",
    "safetensors>=0.4.0",
]
all = [
    "wenet-aishell-u2pp[dev,benchmark,tracking,serve,webui,hub]",
]
